Refactored CMakeList.txt
- added support for Win32 CMake building
- changed zlib to be an optional build component
- changed to use modern CMake definitions where possible
- use libstdc++ if available and not macOS
- fixed missing odr-use storage for Clang
- fixed htobe template mismatch in Clang
- updated requirements and build details

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.3)
 
-project(samdisk)
+file(GLOB CXXSRC src/*.cpp src/types/*.cpp)
+file(GLOB CSRC src/*.c)
+add_executable(samdisk ${CXXSRC} ${CSRC})
+install(TARGETS samdisk DESTINATION bin)
+
+target_include_directories(samdisk PRIVATE include src extern)
+
+target_compile_definitions(samdisk PRIVATE RESOURCE_DIR="${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}/")
+target_compile_definitions(samdisk PRIVATE _FILE_OFFSET_BITS=64)
 
 include(CheckIncludeFiles)
 include(CheckFunctionExists)
@@ -8,63 +16,46 @@ include(CheckSymbolExists)
 include(CheckTypeSize)
 include(CheckCXXCompilerFlag)
 
-# Debug, Release, RelWithDebInfo
-set(CMAKE_BUILD_TYPE RelWithDebInfo)
-if (CMAKE_BUILD_TYPE MATCHES Debug)
-  add_definitions(-D_DEBUG)
-endif ()
-
-CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
-if (COMPILER_SUPPORTS_CXX14)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+if (DEFINED CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE} CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
 else ()
-  message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++14 support.")
+  set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
+endif ()
+message(STATUS "CMAKE_BUILD_TYPE is: ${CMAKE_BUILD_TYPE}")
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+  target_compile_definitions(samdisk _DEBUG=1)
 endif ()
 
-CHECK_CXX_COMPILER_FLAG("-stdlib=libc++" COMPILER_SUPPORTS_STDLIBCXX)
-if (COMPILER_SUPPORTS_STDLIBCXX)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-endif ()
+set_property(TARGET samdisk PROPERTY CXX_STANDARD 14)
 
 CHECK_CXX_COMPILER_FLAG("-Weffc++" COMPILER_SUPPORTS_EFFCXX)
 if (COMPILER_SUPPORTS_EFFCXX)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weffc++")
+  target_compile_options(samdisk PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-Weffc++>)
 endif ()
 
 if (CMAKE_BUILD_TOOL MATCHES "make")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wshadow -pedantic")
+  target_compile_options(samdisk PRIVATE -Wall -Wshadow -pedantic)
 elseif (CMAKE_BUILD_TOOL MATCHES "(msdev|devenv|nmake)")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
-endif ()
-
-# Force Clang to use libstdc++ as libc++ is currently broken on Ubuntu 16.04
-if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
+  target_compile_options(samdisk PRIVATE /W4)
 endif ()
 
 CHECK_CXX_COMPILER_FLAG("-Wsuggest-override" COMPILER_SUPPORTS_WSUGGEST)
 if (COMPILER_SUPPORTS_WSUGGEST)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wsuggest-override")
+  target_compile_options(samdisk PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-Wsuggest-override>)
 endif ()
 
-if (APPLE)
-  set(CMAKE_OSX_SYSROOT "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk")
-  set(CMAKE_OSX_DEPLOYMENT_TARGET 10.7)
-  set(CMAKE_OSX_ARCHITECTURES i386;x86_64)
+CHECK_CXX_COMPILER_FLAG("-stdlib=libc++" COMPILER_SUPPORTS_LIBCXX)
+CHECK_CXX_COMPILER_FLAG("-stdlib=libstdc++" COMPILER_SUPPORTS_LIBSTDCXX)
+if (COMPILER_SUPPORTS_LIBSTDCXX AND NOT APPLE)
+  target_compile_options(samdisk PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-stdlib=libstdc++>)
 endif ()
-
-include_directories(include src)
-file(GLOB SRC src/*.cpp src/*.c src/types/*.cpp)
-
-set(RESOURCE_DIR ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME})
-add_definitions(-DRESOURCE_DIR="${RESOURCE_DIR}/")
-
-add_definitions(-D_FILE_OFFSET_BITS=64)
 
 check_type_size(ssize_t SSIZE_T)
 
 check_symbol_exists(O_BINARY fcntl.h HAVE_O_BINARY)
 
+check_include_files(io.h HAVE_IO_H)
+check_include_files(winsock2.h HAVE_WINSOCK2_H)
 check_include_files(paths.h HAVE_PATHS_H)
 check_include_files(unistd.h HAVE_UNISTD_H)
 check_include_files(sys/time.h HAVE_SYS_TIME_H)
@@ -78,6 +69,7 @@ check_include_files(linux/fs.h HAVE_LINUX_FS_H)
 check_include_files(scsi/scsi.h HAVE_SCSI_SCSI_H)
 check_include_files(scsi/sg.h HAVE_SCSI_SG_H)
 check_include_files(DiskArbitration/DiskArbitration.h HAVE_DISKARBITRATION_DISKARBITRATION_H)
+check_include_files(fdrawcmd.h HAVE_FDRAWCMD_H)
 
 check_function_exists(snprintf HAVE_SNPRINTF)
 check_function_exists(strcasecmp HAVE_STRCASECMP)
@@ -88,86 +80,83 @@ check_function_exists(_strcmpi HAVE__STRCMPI)
 check_function_exists(_snprintf HAVE__SNPRINTF)
 check_function_exists(sysconf HAVE_SYSCONF)
 
-add_definitions(-DHAVE_CONFIG_H)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/include/config.h)
-
 set(CMAKE_THREAD_PREFER_PTHREAD pthread)
 find_package(Threads REQUIRED)
-link_libraries(${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(samdisk ${CMAKE_THREAD_LIBS_INIT})
 
-find_package(ZLIB REQUIRED)
+find_package(ZLIB)
 if (ZLIB_FOUND)
-  add_definitions(-DHAVE_ZLIB)
-  include_directories(${ZLIB_INCLUDE_DIR})
-  link_libraries(${ZLIB_LIBRARY})
+  target_compile_definitions(samdisk PRIVATE HAVE_ZLIB=1)
+  target_include_directories(samdisk PRIVATE ${ZLIB_INCLUDE_DIR})
+  target_link_libraries(samdisk ${ZLIB_LIBRARY})
 endif ()
 
 find_package(BZip2)
 if (BZIP2_FOUND)
-  add_definitions(-DHAVE_BZIP2)
-  include_directories(${BZIP2_INCLUDE_DIR})
-  link_libraries(${BZIP2_LIBRARIES})
+  target_compile_definitions(samdisk PRIVATE HAVE_BZIP2=1)
+  target_include_directories(samdisk PRIVATE ${BZIP2_INCLUDE_DIR})
+  target_link_libraries(samdisk ${BZIP2_LIBRARIES})
 endif ()
 
 find_package(LibLZMA)
 if (LIBLZMA_FOUND)
-  add_definitions(-DHAVE_LZMA)
-  include_directories(${LIBLZMA_INCLUDE_DIRS})
-  link_libraries(${LIBLZMA_LIBRARIES})
+  target_compile_definitions(samdisk PRIVATE HAVE_LZMA=1)
+  target_include_directories(samdisk PRIVATE ${LIBLZMA_INCLUDE_DIRS})
+  target_link_libraries(samdisk ${LIBLZMA_LIBRARIES})
 endif ()
 
-find_library(WINUSB_LIBRARY NAMES winusb ENV LD_LIBRARY_PATH)
+find_library(WINUSB_LIBRARY NAMES winusb)
 find_path(WINUSB_INCLUDE_DIR NAMES winusb.h)
 if (WINUSB_LIBRARY AND WINUSB_INCLUDE_DIR)
   message(STATUS "Found WinUSB: ${LIBUSB1_LIBRARY}")
-  add_definitions(-DHAVE_WINUSB)
-  include_directories(${WINUSB_INCLUDE_DIR})
-  link_libraries(${WINUSB_LIBRARY})
+  target_compile_definitions(samdisk PRIVATE HAVE_WINUSB=1)
+  target_include_directories(samdisk PRIVATE ${WINUSB_INCLUDE_DIR})
+  target_link_libraries(samdisk ${WINUSB_LIBRARY})
 endif ()
 
 find_library(LIBUSB1_LIBRARY NAMES usb-1.0 ENV LD_LIBRARY_PATH)
 find_path(LIBUSB1_INCLUDE_DIR NAMES libusb.h PATH_SUFFIXES libusb-1.0)
 if (LIBUSB1_LIBRARY AND LIBUSB1_INCLUDE_DIR)
   message(STATUS "Found libusb-1.0: ${LIBUSB1_LIBRARY}")
-  add_definitions(-DHAVE_LIBUSB1)
-  include_directories(${LIBUSB1_INCLUDE_DIR})
-  link_libraries(${LIBUSB1_LIBRARY})
+  target_compile_definitions(samdisk PRIVATE HAVE_LIBUSB1=1)
+  target_include_directories(samdisk PRIVATE ${LIBUSB1_INCLUDE_DIR})
+  target_link_libraries(samdisk ${LIBUSB1_LIBRARY})
 endif ()
 
 find_library(FTD2XX_LIBRARY NAMES ftd2xx ENV LD_LIBRARY_PATH)
 find_path(FTD2XX_INCLUDE_DIR ftd2xx.h)
 if (FTD2XX_LIBRARY AND FTD2XX_INCLUDE_DIR)
   message(STATUS "Found FTD2XX: ${FTD2XX_LIBRARY}")
-  add_definitions(-DHAVE_FTD2XX)
-  include_directories(${FTD2XX_INCLUDE_DIR})
-  link_libraries(${FTD2XX_LIBRARY})
+  target_compile_definitions(samdisk PRIVATE HAVE_FTD2XX=1)
+  target_include_directories(samdisk PRIVATE ${FTD2XX_INCLUDE_DIR})
+  target_link_libraries(samdisk ${FTD2XX_LIBRARY})
 endif ()
 
 find_library(FTDI_LIBRARY NAMES ftdi ENV LD_LIBRARY_PATH)
 find_path(FTDI_INCLUDE_DIR ftdi.h)
 if (FTDI_LIBRARY AND FTDI_INCLUDE_DIR)
   message(STATUS "Found FTDI: ${FTDI_LIBRARY}")
-  add_definitions(-DHAVE_FTDI)
-  include_directories(${FTDI_INCLUDE_DIR})
-  link_libraries(${FTDI_LIBRARY})
+  target_compile_definitions(samdisk PRIVATE HAVE_FTDI=1)
+  target_include_directories(samdisk PRIVATE ${FTDI_INCLUDE_DIR})
+  target_link_libraries(samdisk ${FTDI_LIBRARY})
 endif ()
 
-find_library(CAPSIMAGE_LIBRARY NAMES CAPSimage capsimage ENV LD_LIBRARY_PATH)
+find_library(CAPSIMAGE_LIBRARY NAMES CAPSimage capsimage CAPSimg PATHS extern ENV LD_LIBRARY_PATH)
 if (CAPSIMAGE_LIBRARY)
   message(STATUS "Found CAPSimage: ${CAPSIMAGE_LIBRARY}")
 
-  find_path(CAPSIMAGE_INCLUDE_DIR caps/CapsLibAll.h)
+  find_path(CAPSIMAGE_INCLUDE_DIR caps/CapsLibAll.h PATHS extern)
   set(CMAKE_REQUIRED_LIBRARIES ${CAPSIMAGE_LIBRARY})
   check_function_exists(CAPSSetRevolution HAVE_CAPSSETREVOLUTION)
 
   if (CAPSIMAGE_INCLUDE_DIR AND HAVE_CAPSSETREVOLUTION)
-    add_definitions(-DHAVE_CAPSIMAGE)
-    include_directories(${CAPSIMAGE_INCLUDE_DIR})
+    target_compile_definitions(samdisk PRIVATE HAVE_CAPSIMAGE=1)
+    target_include_directories(samdisk PRIVATE ${CAPSIMAGE_INCLUDE_DIR})
     if (APPLE)
-      include_directories(${CAPSIMAGE_INCLUDE_DIR}/..) # find_path bug?
-      set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -F /Library/Frameworks -weak_framework CAPSImage")
+      target_include_directories(samdisk PRIVATE ${CAPSIMAGE_INCLUDE_DIR}/..) # find_path bug?
+	  set_target_properties(samdisk PROPERTIES LINK_FLAGS -F /Library/Frameworks -weak_framework CAPSImage)
     else ()
-      link_libraries(${CAPSIMAGE_LIBRARY})
+      target_link_libraries(samdisk ${CAPSIMAGE_LIBRARY})
     endif ()
   else ()
     message(STATUS "CAPSimage is too old, version 5.1 or later required!")
@@ -176,13 +165,25 @@ else ()
   message(STATUS "CAPSimage not found")
 endif ()
 
+find_library(WINUSB_LIBRARY NAMES winusb)
+if (WINUSB_LIBRARY)
+  target_link_libraries(samdisk ${WINUSB_LIBRARY})
+endif ()
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/include/config.h)
+target_compile_definitions(samdisk PRIVATE HAVE_CONFIG_H=1)
+
+
+if (WIN32)
+  target_compile_definitions(samdisk PRIVATE _WIN32=1)
+  target_link_libraries(samdisk setupapi ws2_32)
+endif ()
+
 if (APPLE)
+  set(CMAKE_OSX_DEPLOYMENT_TARGET 10.9)
+  set(CMAKE_OSX_ARCHITECTURES i386;x86_64)
   find_library(DA_FRAMEWORK DiskArbitration)
   find_library(CF_FRAMEWORK CoreFoundation)
   find_library(IOKIT_FRAMEWORK IOKit)
-  link_libraries(${DA_FRAMEWORK} ${CF_FRAMEWORK} ${IOKIT_FRAMEWORK})
+  target_link_libraries(samdisk ${DA_FRAMEWORK} ${CF_FRAMEWORK} ${IOKIT_FRAMEWORK})
 endif ()
-
-add_executable(samdisk ${SRC})
-
-install(TARGETS samdisk DESTINATION bin)
