--- a/config.h.in
+++ b/config.h.in
@@ -20,6 +20,8 @@
 #cmakedefine HAVE_SYS_TIMEB_H @HAVE_SYS_TIMEB_H@
 #cmakedefine HAVE_IO_H @HAVE_IO_H@
 #cmakedefine HAVE_DISKARBITRATION_DISKARBITRATION_H @HAVE_DISKARBITRATION_DISKARBITRATION_H@
+#cmakedefine HAVE_WINSOCK2_H @HAVE_WINSOCK2_H@
+#cmakedefine HAVE_FDRAWCMD_H @HAVE_FDRAWCMD_H@
 
 #cmakedefine HAVE_STRLCPY @HAVE_STRLCPY@
 #cmakedefine HAVE_STRLCAT @HAVE_STRLCAT@
