KryoFlux device improvements
Moved away from libusb_open_device_with_vid_pid as it doesn't tell
you why the open failed. An access error on opening now suggests
that you might need to be root.

Fixed shared directory path used for KryoFlux firmware. The
CMake PROJECT_NAME symbol wasn't defined, causing us to use
/usr/local/share/Project.

Wrapped other string exceptions in util::exception so they're
properly handled. Also added the function to say what it was doing.

Changed the index splitting to hunt back for the last flux count
if there isn't one at the given position. This hasn't been seen
under Windows, and may be related to the following issues.

Occasional timeout and missing index marker issues are sometimes
seen. The comms doesn't report underrun and the stream completes,
but something isn't quite right somewhere. Needs investigating.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ install(TARGETS samdisk DESTINATION bin)
 
 target_include_directories(samdisk PRIVATE include src extern)
 
-target_compile_definitions(samdisk PRIVATE RESOURCE_DIR="${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}/")
+target_compile_definitions(samdisk PRIVATE RESOURCE_DIR="${CMAKE_INSTALL_PREFIX}/share/samdisk/")
 target_compile_definitions(samdisk PRIVATE _FILE_OFFSET_BITS=64)
 
 include(CheckIncludeFiles)
