Fix macOS build issues due to weak linking
- fixed CAPSGetVersionInfo weak-link prototype
- fixed weak-link linker flags, which now seem to need quoting
- removed find_path work-around as it's now working correctly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,8 +153,7 @@ if (CAPSIMAGE_LIBRARY)
     target_compile_definitions(samdisk PRIVATE HAVE_CAPSIMAGE=1)
     target_include_directories(samdisk PRIVATE ${CAPSIMAGE_INCLUDE_DIR})
     if (APPLE)
-      target_include_directories(samdisk PRIVATE ${CAPSIMAGE_INCLUDE_DIR}/..) # find_path bug?
-	  set_target_properties(samdisk PROPERTIES LINK_FLAGS -F /Library/Frameworks -weak_framework CAPSImage)
+      set_target_properties(samdisk PROPERTIES LINK_FLAGS "-F /Library/Frameworks -weak_framework CAPSImage")
     else ()
       target_link_libraries(samdisk ${CAPSIMAGE_LIBRARY})
     endif ()
