Added read support for CopyQM disk images
Works with all the images I've tried, but uses reverse-engineered
details so there could be missing features. The code will warn if
unused fields in the header are found to contain data.

Added some bytewise value reading helpers, and changed util::trim
to also strip trailing null characters.

--- a/SAMdisk.vcxproj
+++ b/SAMdisk.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="src\types\builtin.cpp" />
     <ClCompile Include="src\types\cfi.cpp" />
     <ClCompile Include="src\types\cpm.cpp" />
+    <ClCompile Include="src\types\cqm.cpp" />
     <ClCompile Include="src\types\cwtool.cpp" />
     <ClCompile Include="src\types\d2m.cpp" />
     <ClCompile Include="src\types\d4m.cpp" />
