Added read-write support for SAP (Thomson) images
Includes support for sectors using format=4 and protection=7.

If the SAP content is entirely normal we apply a regular Thomson
format to the raw sector data. This can be suppressed using -v.

Thanks to emulix75 for providing details and sample disk images.

--- a/SAMdisk.vcxproj
+++ b/SAMdisk.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="src\types\record.cpp" />
     <ClCompile Include="src\types\s24.cpp" />
     <ClCompile Include="src\types\sad.cpp" />
+    <ClCompile Include="src\types\sap.cpp" />
     <ClCompile Include="src\types\sbt.cpp" />
     <ClCompile Include="src\types\scl.cpp" />
     <ClCompile Include="src\types\scp.cpp" />
