Added 2-drive raw reading support (using ab: device)
Support for Vincent Joguin's 2-drive reading technique, created
for Disk2FDI, and later used for Toni Wilen's adfread. Requires
both A: and B: be supported by the BIOS, with both floppy drives
connected to the motherboard floppy port by a single cable.

Allows reading of double-density formats that the PC floppy
controller doesn't natively support, such as AmigaDOS. The raw
bitstream data is passed to the BitstreamDecoder, so any known
formats can be extracted.

--- a/SAMdisk.vcxproj
+++ b/SAMdisk.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="src\types\dti.cpp" />
     <ClCompile Include="src\types\fd.cpp" />
     <ClCompile Include="src\types\fdi.cpp" />
+    <ClCompile Include="src\types\fdrawsys_ab_dev.cpp" />
     <ClCompile Include="src\types\fdrawsys_dev.cpp" />
     <ClCompile Include="src\types\hfe.cpp" />
     <ClCompile Include="src\types\imd.cpp" />
